[Code] Fetched latest angular js.
NOTE: Please make sure you go back to a stable version.

Installed the latest rawgit angular. Integrated it into existing code.

--- a/views/layouts/navbar.jade
+++ b/views/layouts/navbar.jade
@@ -1,4 +1,4 @@
-md-toolbar.navbar.navbar-default.navbar-fixed-top(ng-controller='NavbarCtrl', ng-cloak)
+md-toolbar.navbar.navbar-default.navbar-fixed-top(ng-controller='NavbarCtrl', ng-cloak, style='max-height:50px')
   div.container
     div.navbar-header
       a.navbar-brand(href='#')
