--- a/views/layouts/layout.jade
+++ b/views/layouts/layout.jade
@@ -16,10 +16,12 @@ html
     script(src='/javascripts/allangular.js')
     script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-animate.min.js')
     script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-aria.min.js')
-    script(src="//ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.js")
+    //script(src="//ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.js")
+    script(src="https://rawgit.com/angular/bower-material/master/angular-material.js")
     //script(src='/vendor/material/angular-material.js')
     script(src='/vendor/angular-file-upload/angular-file-upload.js')
-    link(rel='stylesheet', href='//ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.css')
+    //link(rel='stylesheet', href='//ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.css')
+    link(rel="stylesheet", href="https://rawgit.com/angular/bower-material/master/angular-material.css")
     link(rel='stylesheet', href='/stylesheets/core.css')
     link(rel='stylesheet', href='/stylesheets/users/users.css')
 
@@ -36,6 +38,7 @@ html
     script(src='/javascripts/controllers.js')
     script(src='/javascripts/services/Auth.js')
     script(src='/javascripts/services/Avatar.js')
+    script(src='/javascripts/services/Message.js')
     script(src='/javascripts/services/Profile.js')
     script(src='/javascripts/services/Session.js')
     script(src='/javascripts/services/Subject.js')
