[Code] Retrieving messages and outputting

--- a/styles/core.scss
+++ b/styles/core.scss
@@ -113,3 +113,11 @@ select, textarea, input, .form-control {
  white-space: -o-pre-wrap; /* Opera 7 */
  word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
+
+.message-me {
+  background: #ffffff;
+}
+
+.message-them {
+  background: whitesmoke;
+}
