--- a/views/layouts/layout.jade
+++ b/views/layouts/layout.jade
@@ -38,6 +38,7 @@ html
     script(src='/javascripts/controllers.js')
     script(src='/javascripts/services/Auth.js')
     script(src='/javascripts/services/Avatar.js')
+    script(src='/javascripts/services/Inbox.js')
     script(src='/javascripts/services/Message.js')
     script(src='/javascripts/services/Profile.js')
     script(src='/javascripts/services/Session.js')
