--- a/views/message/inbox.jade
+++ b/views/message/inbox.jade
@@ -4,23 +4,36 @@ div(layout='column', style='height:100%')
       md-toolbar(class="md-theme-indigo")
         h1(class="md-toolbar-tools") Sidenav Left
       md-content(class="md-padding")
+        md-list
+          md-item(ng-repeat='(keyUser, msgs) in inbox')
+            md-item-content
+              md-button(layout-fill, ng-click='showMessages(keyUser, msgs)')
+                md-content {{keyUser}}
         p(hide-md show-gt-md)
         | This sidenav is locked open on your device. To go back to the default behavior, narrow your display.
-        pre {{userBase}}
+        pre {{inbox | json}}
     md-content(flex, class="md-padding", layout='column', layout-fill, layout-align='space-between center')
       div(layout='row', layout-fill, style='min-height:64px')
         md-autocomplete(flex,
+        ng-disabled='disableReceiver',
         md-selected-item='receiver',
         md-search-text='searchText',
         md-items='user in filterUserBase()',
         md-item-text='user.username',
         md-floating-label='Receiver')
           span(md-highlight-text="searchText") {{user.username}}
-        md-button(class="md-fab md-primary", aria-label="Comment", ng-click='sendMessage()')
-          span(class='glyphicon glyphicon-send')
       md-content(flex, layout-fill)
-        p Cool, now it scrolls
+        md-list
+          md-item(ng-repeat='msg in displayMessages')
+            md-item-content(ng-class='{"message-them" : msg.from._id == currentUser._id}')
+              div(class='md-tile-left md-padding') {{msg.date | date:'MMM d'}}
+              div(class='md-tile-content')
+                h2 {{msg.from.username}}
+                h3 {{msg.content}}
+            md-divider
       div(layout='row', layout-fill, style='height:200px')
         md-input-container(layout-fill)
           label Message {{receiver? 'to ' + receiver.username : ''}}
           textarea(ng-model="message", columns="1", md-maxlength="1500")
+        md-button(class="md-fab md-primary", aria-label="Comment", ng-click='sendMessage()')
+          span(class='glyphicon glyphicon-send')
