[Code] Inbox service

--- a/views/layouts/layout.jade
+++ b/views/layouts/layout.jade
@@ -25,6 +25,8 @@ html
     link(rel='stylesheet', href='/stylesheets/core.css')
     link(rel='stylesheet', href='/stylesheets/users/users.css')
 
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.js')
+
     base(href='/')
 
     block neck
