--- a/views/message/inbox.jade
+++ b/views/message/inbox.jade
@@ -2,7 +2,7 @@ div(layout='column', style='height:100%')
   section(layout='row', flex)
     md-sidenav(class='md-sidenave-left md-whiteframe-z1',md-component-id="left", md-is-locked-open="$mdMedia('gt-md')")
       md-toolbar(class="md-theme-indigo")
-        h1(class="md-toolbar-tools") Sidenav Left
+        h1(class="md-toolbar-tools") Inbox
       md-content(class="md-padding")
         md-list
           md-item(ng-repeat='(keyUser, msgs) in inbox')
@@ -16,10 +16,6 @@ div(layout='column', style='height:100%')
           md-content
             span(class='glyphicon glyphicon-plus')
             | New message
-        p(hide-md show-gt-md)
-        | This sidenav is locked open on your device. To go back to the default behavior, narrow your display.
-        pre {{currentUser}}
-        pre {{inbox | json}}
     md-content(flex, class="md-padding", layout='column', layout-fill, layout-align='space-between center')
       div(layout='row', layout-fill, style='min-height:64px')
         md-autocomplete(flex,
