[Code] Cancel button

--- a/views/users/edit.jade
+++ b/views/users/edit.jade
@@ -31,7 +31,7 @@ div.container
       md-toolbar.md-theme-light
         h1.md-toolbar-tools
           span {{ PrettyName(key) }}
-          md-button(class='md-accent', ng-click="profileInput[key] = true") Edit
+          md-button(class='md-accent', ng-click="edit(key)") Edit
       md-content(class='md-padding' ng-show='value && !isSubject(key) && !isDegree(key)')
         | {{value}}
       md-content(ng-show='value && isSubject(key)')
@@ -56,7 +56,7 @@ div.container
       md-toolbar.md-theme-light
         h1.md-toolbar-tools
           span {{ PrettyName(key) }}
-          md-button(class='md-accent', ng-click="profileInput[key] = false") Cancel
+          md-button(class='md-accent', ng-click="cancelEdit(key)") Cancel
           md-button(class='md-accent', ng-click='updateUser(key)') Save
       md-content(ng-show='isSubject(key)')
         md-list
