--- a/views/search/oxSearchProfile.jade
+++ b/views/search/oxSearchProfile.jade
@@ -4,13 +4,13 @@ div(class='row')
       td(style='padding: 20px')
         div(class='row')
           div(class='col-sm-3', ng-hide='isProfile')
-            img(ng-src="/avatar/{{user.userId}}", style='max-height:200px')
+            img(ng-src="/avatar/{{user._id}}", style='max-height:200px')
           div(class='col-sm-9')
             h1
-              a(ng-href='/users/{{user.userId}}', ng-hide='isProfile') {{user.username}}
+              a(ng-href='/users/{{user._id}}', ng-hide='isProfile') {{user.username}}
               span(ng-show='isProfile') {{user.username}}
               md-button(class='md-fab md-primary',
-              ng-href='http://localhost:3000/inbox/?receiver={{user.username}}&receiverId={{user.userId}}',
+              ng-href='http://localhost:3000/inbox/?receiver={{user.username}}&receiverId={{user._id}}',
               aria-label='Email')
                 span(class='glyphicon glyphicon-comment')
             div(ng-show='user.summary.degree.length > 0 && user.summary.summary.length > 0')
