--- a/views/layouts/layout.jade
+++ b/views/layouts/layout.jade
@@ -14,6 +14,7 @@ html
 
     script(src='http://hammerjs.github.io/dist/hammer.min.js')
     script(src='/javascripts/allangular.js')
+    script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-messages.js')
     script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-animate.min.js')
     script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-aria.min.js')
     //script(src="//ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.js")
@@ -48,3 +49,6 @@ html
     script(src='/javascripts/services/User.js')
     script(src='/javascripts/directives/ngThumb.js')
     script(src='/javascripts/directives/oxSearchProfile.js')
+    script(src='/javascripts/directives/oxUniqueUsername.js')
+    script(src='/javascripts/directives/oxRegisterForm.js')
+    script(src='/javascripts/directives/oxOxfordEmail.js')
