--- a/views/search/oxSearchProfile.jade
+++ b/views/search/oxSearchProfile.jade
@@ -7,7 +7,7 @@ div(class='row')
             img(ng-src="/avatar/{{user._id}}", style='max-height:200px')
           div(class='col-sm-9')
             h1
-              a(ng-href='/users/{{user._id}}', ng-hide='isProfile') {{user.username}}
+              a(ng-href='/users/{{user._id}}', ng-hide='isProfile') {{user.firstName + " " + user.lastName}}
               span(ng-show='isProfile') {{user.username}}
               md-button(class='md-fab md-primary',
               ng-href='http://localhost:3000/inbox/?receiver={{user.username}}&receiverId={{user._id}}',
