--- a/views/layouts/layout.jade
+++ b/views/layouts/layout.jade
@@ -25,7 +25,8 @@ html
     link(rel="stylesheet", href="https://rawgit.com/angular/bower-material/master/angular-material.css")
     link(rel='stylesheet', href='/stylesheets/core.css')
     link(rel='stylesheet', href='/stylesheets/users/users.css')
-
+    link(rel="stylesheet" href="//fonts.googleapis.com/css?family=RobotoDraft:400,500,700,400italic")
+    link(rel='stylesheet' href='http://fonts.googleapis.com/css?family=Noto+Serif', type='text/css')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.js')
 
     base(href='/')
