[Code] About and Contact pages

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ link(rel='stylesheet', href='/stylesheets/index.css')
 div(style='height:100%')
   md-content(layout, layout-fill)
     div.cover(layout-fill)
-      h1(style='letter-spacing:7px') OxStuTutors
+      h1(style='letter-spacing:7px;color:rgba(0, 33, 77, .9)') OxStuTutors
       p.lead
         | Tutoring made easy.
         div
