--- a/views/index.jade
+++ b/views/index.jade
@@ -1,12 +1,11 @@
 link(rel='stylesheet', href='/stylesheets/index.css')
 div(style='height:100%')
-  md-content(layout, layout-fill)
-    div.cover(layout-fill)
-      h1(style='letter-spacing:7px;color:rgba(0, 33, 77, .9)') OxStuTutors
-      p.lead
-        | Tutoring made easy.
-        div
-          a.btn.btn-primary.btn-lg(href='/signup/') Create an Account
+  div.container.cover(layout-fill)
+    h1(style='letter-spacing:7px;color:rgba(0, 33, 77, .9)') OxStuTutors
+    p.lead
+      | Tutoring made easy.
+      div
+        a.btn.btn-primary.btn-lg(href='/signup/') Create an Account
   div.container(class='row whoWeAre', style='text-align:center')
     div(class='col-md-1')
     div(class='col-md-10')
