--- a/views/layouts/navbar.jade
+++ b/views/layouts/navbar.jade
@@ -1,7 +1,7 @@
 md-toolbar.navbar.navbar-default.navbar-fixed-top(ng-controller='NavbarCtrl', ng-cloak, style='max-height:50px')
   div.container
     div.navbar-header
-      a.navbar-brand(href='#')
+      a.navbar-brand(href='/')
         span.navbar-brand-label OxStuTutors
       button.navbar-toggle.collapsed(data-toggle='collapse', data-target='.my-navbar-collapse')
         span.icon-bar
@@ -17,6 +17,9 @@ md-toolbar.navbar.navbar-default.navbar-fixed-top(ng-controller='NavbarCtrl', ng
         li: md-button(href='/login/')
           i.fa.fa-user
           | Sign In
+        li: md-button(href='/signup/')
+          i.fa.fa-user
+          | Register
       ul.nav.navbar-nav.navbar-right(ng-show='currentUser')
         li: md-button(href='/inbox/')
           span(class="glyphicon glyphicon-envelope")
