--- a/views/message/inbox.jade
+++ b/views/message/inbox.jade
@@ -44,7 +44,7 @@ div(layout='column', style='height:100%')
           textarea(ng-model="message", columns="1", md-maxlength="1500",
           ng-disabled='messageDisable', ng-required='messageRequired',
           ng-focus='messageError = false')
-          div(ng-show='messageError', ng-messages='messageError')
+          div(ng-messages='messageError')
             div(ng-message='required') Not a valid message or receiver.
         md-button(class="md-fab md-primary", aria-label="Comment", ng-click='sendMessage()', ng-disabled='buttonDisable')
           span(class='glyphicon glyphicon-send')
