--- a/views/search/oxSearchProfile.jade
+++ b/views/search/oxSearchProfile.jade
@@ -10,7 +10,7 @@ div(class='row')
               a(ng-href='/users/{{user._id}}', ng-hide='isProfile') {{user.firstName + " " + user.lastName}}
               span(ng-show='isProfile') {{user.username}}
               md-button(class='md-fab md-primary',
-              ng-href='http://localhost:3000/inbox/?receiver={{user.username}}&receiverId={{user._id}}',
+              ng-href='/inbox/?receiver={{user.username}}&receiverId={{user._id}}',
               aria-label='Email')
                 span(class='glyphicon glyphicon-comment')
             div(ng-show='user.summary.degree.length > 0 && user.summary.summary.length > 0')
